# SRX-get-security-zones

./: README.md  app.py  app_async.py  pyproject.toml
files/docker/: .env
templates/: sz.j2
