[tool.poetry]
name = "srx-get-security-zones"
version = "0.1.0"
description = "Use scrapli to retrieve security zone information from a Juniper SRX firewall"
authors = ["Calvin Remsburg <cremsburg@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapli-netconf = "^2021.7.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
